--- a/cs/browser/chrome/browser/preferences/preferences.properties
+++ b/cs/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Server:
 domainColon=Doména:
 forSecureOnly=Pouze šifrovaná připojení
 forAnyConnection=Libovolný typ připojení
-AtEndOfSession=do konce relace
+expireAtEndOfSession=Na konci relace
 can=Povolit
 canSession=Povolit pro relaci
 cannot=Blokovat
@@ -94,7 +94,7 @@ removeCookie=Odebrat cookie
 #### Offline apps
 offlineAppRemoveTitle=Smazání offline obsahu
 offlineAppRemovePrompt=Po smazání offline obsahu serveru %S, nebude server dostupný v režimu offline. Opravdu chcete smazat offline obsah tohoto serveru?
-offlineAppRemoveConfirm=Smazat offline obsah 
+offlineAppRemoveConfirm=Smazat offline obsah
 
 # LOCALIZATION NOTE: The next string is for the disk usage of the
 # offline application
