--- a/cs/calendar/chrome/calendar/timezones.properties
+++ b/cs/calendar/chrome/calendar/timezones.properties
@@ -279,7 +279,7 @@ pref.timezone.Asia.Kabul=Asie/Kábul
 pref.timezone.Asia.Kamchatka=Asie/Kamčatka
 pref.timezone.Asia.Karachi=Asie/Karáčí
 pref.timezone.Asia.Kashgar=Asie/Kašgar
-pref.timezone.Asia.Katmandu=Asie/Káthmándú
+pref.timezone.Asia.Kathmandu=Asie/Káthmándú
 pref.timezone.Asia.Krasnoyarsk=Asie/Krasnojarsk
 pref.timezone.Asia.Kuala_Lumpur=Asie/Kuala Lumpur
 pref.timezone.Asia.Kuching=Asie/Kuching
