--- a/cs/dom/chrome/layout/css.properties
+++ b/cs/dom/chrome/layout/css.properties
@@ -37,8 +37,6 @@
 MimeNotCss=Soubor s kaskádovými styly %1$S nebyl použit, protože má typ MIME "%2$S" místo "text/css".
 MimeNotCssWarn=Soubor s kaskádovými styly %1$S byl použit, i když má typ MIME "%2$S" místo "text/css".
 
-UseOfGetPropertyCSSValueWarning=Použití getPropertyCSSValue() není doporučováno. Aktualizujte svůj kód a používejte getPropertyValue().
-
 PEUnexpEOF2=Neočekávaný konec souboru při hledání %1$S.
 PEParseRuleWSOnly=Řetězec složený z 'bílých znaků' je předán k parsování jako pravidlo.
 PEDeclDropped=Deklarace vynechána.
@@ -125,7 +123,7 @@ PEEndOfDeclEOF=konce deklarace
 PEImportantEOF=pravidla important
 PEExpectedImportant=Očekáváno 'important', ale nalezeno '%1$S'.
 PEBadDeclEnd=K ukončení deklarace očekáván znak ';', ale nalezeno '%1$S'.
-PEBadDeclOrRuleEnd2=K ukončení deklarace očekáván znak ';' či '}', ale nalezeno '%1$S'.
+PEBadDeclOrRuleEnd2=Na konci deklarace očekáván znak ';' či '}', ale nalezeno '%1$S'.
 PEInaccessibleProperty2=U interní proměnné nelze specifikovat hodnotu.
 PECommentEOF=konce komentáře
 SEUnterminatedString=Nalezen neuzavřený řetězec '%1$S'.
@@ -137,3 +135,5 @@ PEMQExpectedFeatureName=Očekáváno jméno vlastnosti v media query, ale naleze
 PEMQExpectedFeatureNameEnd=Za jménem vlastnosti v media query očekáván znak ':' nebo ')', ale nalezeno '%1$S'.
 PEMQNoMinMaxWithoutValue=Vlastnosti media query min- nebo max- musí obsahovat hodnotu.
 PEMQExpectedFeatureValue=Nalezena neplatná hodnota vlastnosti v media query.
+PEBadFontBlockStart=Na začátku pravidla @font-face očekáván znak '{', ale nalezeno '%1$S'.
+PEBadFontBlockEnd=Na konci pravidla @font-face očekáván znak '}', ale nalezeno '%1$S'.
