--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -121,10 +121,10 @@ messageCollapsed=Sbalené
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<nebyl zadán>
-smtpServer-SecureConnection-Type_0=Ne
-smtpServer-SecureConnection-Type_1=STARTTLS, je-li dostupné
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP přes SSL
+smtpServer-ConnectionSecurityType-0=Žádné
+smtpServer-ConnectionSecurityType-1=STARTTLS, je-li dostupné
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Ne
 smtpServer-SecureAuthentication-Type-true=Ano
 smtpServers-confirmServerDeletionTitle=Smazat server
@@ -171,6 +171,7 @@ templatesFolderName=Šablony
 outboxFolderName=Pošta k odeslání
 junkFolderName=Nevyžádaná
 archivesFolderName=Archív
+
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE(specialFolderDeletionErr): Do not translate "IMAP" in the line below
@@ -350,6 +351,16 @@ biffNotification_messages=má %1$S nových(é) zpráv(y)
 newBiffNotification_message=Účet %1$S má %2$S novou zprávu
 newBiffNotification_messages=Účet %1$S má %2$S  nových(é) zpráv(y)
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nová zpráva od %2$S.
+macBiffNotification_messages=%1$S nových zpráv od %2$S.
+macBiffNotification_messages_extra=%1$S nových zpráv od %2$S a %3$S další.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S z %S KB použito
 quotaPercentUsed=%S%% zaplněno
@@ -362,6 +373,7 @@ confirmViewDeleteTitle=Potvrzení
 confirmViewDeleteMessage=Opravdu chcete smazat tento pohled?
 
 # for virtual folders
+confirmSavedSearchTitle=Potvrzení smazání
 confirmSavedSearchDeleteMessage=Opravdu chcete smazat toto uložené hledání
 
 ## @name ENTER_PASSWORD_PROMPT
@@ -459,3 +471,15 @@ headerFieldYou=já
 
 # The what's new tab title, shown on version update
 whatsNew=Co je nového
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Kontakt
+glodaSearch_results_why_subject=Předmět
+glodaSearch_results_why_body=Tělo
+glodaSearch_results_why_attachment=Příloha
