--- a/cs/suite/chrome/common/history/places.properties
+++ b/cs/suite/chrome/common/history/places.properties
@@ -1,7 +1,14 @@
-load-js-data-url-error=For security reasons, javascript or data urls cannot be loaded from the history window or sidebar.
-noTitle=(no title)
+delete.hostname.true=Smazat historii serveru %S
+delete.hostname.false=Smazat historii serveru
+delete.hostname.accesskey=S
+delete.domain.true=Smazat historii *.%S
+delete.domain.false=Smazat historii domény
+delete.domain.accesskey=h
 
-tabs.openWarningTitle=Confirm open
-tabs.openWarningMultipleBranded=You are about to open %S tabs.  This might slow down %S while the pages are loading.  Are you sure you want to continue?
-tabs.openButtonMultiple=Open tabs
-tabs.openWarningPromptMeBranded=Warn me when opening multiple tabs might slow down %S
+load-js-data-url-error=Z důvodů bezpečnosti není možné načítat adresy typu javascript nebo data z okna historie či postranního panelu.
+noTitle=(bez titulku)
+
+tabs.openWarningTitle=Potvrzení otevření
+tabs.openWarningMultipleBranded=Chystáte se otevřít více panelů (%S) najednou. Takovéto nahrávání stránek může aplikaci %S zpomalit. Jste si jisti, že chcete pokračovat?
+tabs.openButtonMultiple=Otevřít panely
+tabs.openWarningPromptMeBranded=Varovat, pokud otevření více panelů může zpomalit aplikaci %S
