--- a/cs/suite/chrome/common/permissions/cookieViewer.properties
+++ b/cs/suite/chrome/common/permissions/cookieViewer.properties
@@ -46,7 +46,7 @@ hostColon=Server:
 domainColon=Doména:
 forSecureOnly=Pouze šifrovaná spojení
 forAnyConnection=Jakýkoliv typ spojení
-AtEndOfSession = na konci relace
+expireAtEndOfSession=Na konci relace
 deleteAllCookies=Chcete skutečně vymazat všechny cookies?
 deleteAllCookiesTitle=Odebrat všechny cookies
 deleteAllCookiesYes=&Remove
