--- a/cs/suite/chrome/mailnews/messenger.properties
+++ b/cs/suite/chrome/mailnews/messenger.properties
@@ -37,9 +37,7 @@
 #
 # ***** END LICENSE BLOCK *****
 
-#
 # The following are used by the messenger application
-#
 renameFolder=Přejmenovat složku…
 compactFolder=Provést údržbu složky
 removeAccount=Smazat účet…
@@ -124,15 +122,15 @@ messageUnread=Nepřečtená
 messageHasFlag=S praporkem
 messageHasAttachment=S přílohou
 messageJunk=Nevyžádaná
-messageExpanded=Expanded
-messageCollapsed=Collapsed
+messageExpanded=Rozbaleno
+messageCollapsed=Sbaleno
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<nespecifikován>
-smtpServer-SecureConnection-Type_0=Ne
-smtpServer-SecureConnection-Type_1=STARTTLS, je-li dostupný
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP přes SSL
+smtpServer-ConnectionSecurityType-0=Žádný
+smtpServer-ConnectionSecurityType-1=STARTTLS, je-li dostupný
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Ne
 smtpServer-SecureAuthentication-Type-true=Ano
 smtpServers-confirmServerDeletionTitle=Smazat server
@@ -340,6 +338,16 @@ fromSearchCriteria=Předmět nebo Od obsahuje:
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages
 biffNotification_message=má %1$S nových zpráv
 biffNotification_messages=má %1$S nových(é) zpráv(y)
+
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nová zpráva od %2$S.
+macBiffNotification_messages=%1$S nové zprávy od %2$S.
+macBiffNotification_messages_extra=%1$S nové zprávy od %2$S a %3$S další.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S z %S KB použito
