--- a/cs/suite/chrome/mailnews/newsblog/newsblog.properties
+++ b/cs/suite/chrome/mailnews/newsblog/newsblog.properties
@@ -1,33 +1,33 @@
 # Status strings used in the subscribe dialog
 
-subscribe-validating=Verifying the RSS feed…
-subscribe-cancelSubscription=Are you sure you wish to cancel subscribing to the current feed?
-subscribe-cancelSubscriptionTitle=Subscribing to a Feed…
-subscribe-noFeedSelected=<no RSS feed selected>
-subscribe-feedAlreadySubscribed=You already have a subscription for this feed.
-subscribe-errorOpeningFile=Could not open the file.
+subscribe-validating=kontrola RSS kanálu…
+subscribe-cancelSubscription=Jste si jisti, že chcete zrušit odebírání tohoto RSS kanálu?
+subscribe-cancelSubscriptionTitle=Nastavení odebírání RSS kanálu…
+subscribe-noFeedSelected=<není vybrán žádný RSS kanál>
+subscribe-feedAlreadySubscribed=K odebírání tohoto RSS kanálu jste již přihlášen.
+subscribe-errorOpeningFile=Nepodařilo se otevřít soubor.
 
-subscribe-OPMLImportTitle=Select OPML file to import
-subscribe-OPMLExportTitle=Export feeds as an OPML file
-subscribe-OPMLExportFileTitle=SeaMonkey OPML Export
-subscribe-OPMLExportFileName=MySeaMonkeyFeeds.opml
+subscribe-OPMLImportTitle=Zvolte OPML soubor pro import
+subscribe-OPMLExportTitle=Exportovat kanály jako OPML soubor
+subscribe-OPMLExportFileTitle=OPML Export
+subscribe-OPMLExportFileName=Thunderbird.opml
 #LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
-subscribe-errorInvalidOPMLFile=Either %S is not a valid OPML file or there was an error importing the file.
+subscribe-errorInvalidOPMLFile=Buďto %S není platným OPML souborem nebo při importu došlo k chybě.
 
-subscribe-OPMLExportOPMLFilesFilterText=OPML Files
+subscribe-OPMLExportOPMLFilesFilterText=OPML soubory
 
 #LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
-subsribe-confirmFeedDeletionTitle=Remove Feed
-subsribe-confirmFeedDeletion=Are you sure you want to unsubscribe from the feed: \n %S?
+subsribe-confirmFeedDeletionTitle=Odebrat RSS kanál
+subsribe-confirmFeedDeletion=Jste si jisti, že se chcete odhlásit z odebírání RSS kanálu: \n %S?
 
-# when downloading new feed items from the subscribe dialog. 
+# when downloading new feed items from the subscribe dialog.
 # LOCALIZATION NOTE: Do not translate %d in the following line.
 # The first %S will receive the number of messages received so far;
 # the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Downloading feed articles (%S of %S)
+subscribe-fetchingFeedItems=Stahuji články (%S z %S)
 
-newsblog-noNewArticlesForFeed=There are no new articles for this feed.
-newsblog-networkError=%S could not be found. Please check the name and try again.
-newsblog-invalidFeed=%S is not a valid RSS feed.
-newsblog-getNewMailCheck=Checking RSS feeds for new items
+newsblog-noNewArticlesForFeed=Pro tento RSS kanál nejsou dostupné žádné nové články.
+newsblog-networkError=%S nebyl nalezen. Zkontrolujte prosím jeho adresu a zkuste to znovu.
+newsblog-invalidFeed=%S není platný RSS kanál.
+newsblog-getNewMailCheck=Kontroluji RSS kanál na nové články
 
