--- a/cs/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/cs/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,90 +37,190 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=každý den
-repeatDetailsRuleDaily2=každý druhý den
-repeatDetailsRuleDaily3=každý %1$S. den
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=každý den;každý #1. den;každých #1. den
 repeatDetailsRuleDaily4=každý víkend
 
-repeatDetailsRuleWeekly1=každý %1$S
-repeatDetailsRuleWeekly2=každý druhý týden v %1$S
-repeatDetailsRuleWeekly3=každý %1$S týden v %2$S
-repeatDetailsRuleWeekly4=každý týden
-repeatDetailsRuleWeekly5=každý druhý týden
-repeatDetailsRuleWeekly6=každý %1$S. týden
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=každý %1$S;každý #2. týden v %1$S;každý #2. týden v %1$S
 
-repeatDetailsDay1=Neděle
-repeatDetailsDay2=Pondělí
-repeatDetailsDay3=Úterý
-repeatDetailsDay4=Středa
-repeatDetailsDay5=Čtvrtek
-repeatDetailsDay6=Pátek
-repeatDetailsDay7=Sobota
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=každý týden;každý #1. týden;každý #1. týden
+
+repeatDetailsDay1=neděle
+repeatDetailsDay2=pondělí
+repeatDetailsDay3=úterý
+repeatDetailsDay4=středa
+repeatDetailsDay5=čtvrtek
+repeatDetailsDay6=pátek
+repeatDetailsDay7=sobota
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=a
 
-repeatDetailsRuleMonthly=%1$S %2$S každý měsíc
-repeatDetailsRuleMonthly2=%1$S %2$S každý druhý měsíc
-repeatDetailsRuleMonthly3=%1$S %2$S každý %3$S. měsíc
-repeatDetailsRuleMonthly4=%1$S každý měsíc
-repeatDetailsRuleMonthly5=%1$S každý druhý měsíc
-repeatDetailsRuleMonthly6=%1$S každý %2$S. měsíc
-repeatDetailsRuleMonthly7=poslední den v měsící
-repeatDetailsRuleMonthly8=poslední den v každém druhém měsíci
-repeatDetailsRuleMonthly9=poslední den v každém %1$S. měsíci
+# LOCALIZATION NOTE (monthlyNthOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=%1$S %2$S každý měsíc;%1$S %2$S každý #3. měsíc;%1$S %2$S každý #3. měsíc
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months"
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=každý %1$S každý měsíc;každý %1$S každý #2.měsíc;každý %1$S každý #2.měsíc
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=%1$S. den v každém měsíci;%1$S. den v každém #2. měsíci;%1$S. den v každém #2. měsíci
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=poslední den v měsíci;poslední den každý #1. měsíc;poslední den každý #1. měsíc
 
 repeatDetailsOrdinal1=první
-repeatDetailsOrdinal2=druý
+repeatDetailsOrdinal2=druhý
 repeatDetailsOrdinal3=třetí
 repeatDetailsOrdinal4=čtvrtý
 repeatDetailsOrdinal5=pátý
 repeatDetailsOrdinal-1=poslední
 
-repeatDetailsRuleYearly1=každý %1$S %2$S
-repeatDetailsRuleYearly2=každý druhý rok v %1$S %2$S
-repeatDetailsRuleYearly3=každý %3$S roks v %1$S %2$S
-repeatDetailsRuleYearly4=%1$S %2$S v %3$S
-repeatDetailsRuleYearly5=každý druhý rok %1$S %2$S v %3$S
-repeatDetailsRuleYearly6=každé %4$S roky %1$S %2$S v %3$S
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=každý %2$S. %1$S;%2$S. %1$S každé #3 roky;%2$S. %1$S každých #3 let
 
-repeatDetailsMonth1=Leden
-repeatDetailsMonth2=Únor
-repeatDetailsMonth3=Březen
-repeatDetailsMonth4=Duben
-repeatDetailsMonth5=Květen
-repeatDetailsMonth6=Červen
-repeatDetailsMonth7=Červenec
-repeatDetailsMonth8=Srpen
-repeatDetailsMonth9=Září
-repeatDetailsMonth10=Říjen
-repeatDetailsMonth11=Listopad
-repeatDetailsMonth12=Prosinec
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=%1$S %2$S každý %3$S;%1$S %2$S v %3$S každé #4 roky;%1$S %2$S v %3$S každých #4 let
 
-repeatDetailsCount=Occurs %1$S\neffective %2$S for %3$S times\n from %4$S to %5$S.
-repeatDetailsCountAllDay=Occurs %1$S\neffective %2$S for %3$S times.
-repeatDetailsUntil=Occurs %1$S\neffective %2$S until %3$S\n from %4$S to %5$S.
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #3 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyOnEveryNthOfNth=každý %1$S v %2$S;každý %1$S v %2$S; každé #3 roky;každý %1$S v %2$S; každých #3 let
+
+repeatDetailsMonth1=leden
+repeatDetailsMonth2=únor
+repeatDetailsMonth3=březen
+repeatDetailsMonth4=duben
+repeatDetailsMonth5=květen
+repeatDetailsMonth6=červen
+repeatDetailsMonth7=červenec
+repeatDetailsMonth8=srpen
+repeatDetailsMonth9=září
+repeatDetailsMonth10=říjen
+repeatDetailsMonth11=listopad
+repeatDetailsMonth12=prosinec
+
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Occurs %1$S\neffective %2$S for #5 time\nfrom %3$S to %4$S.;Occurs %1$S\neffective %2$S for #5 times\nfrom %3$S to %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Occurs %1$S\neffective %2$S for #3 time.;Occurs %1$S\neffective %2$S for #3 times.
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleWeekly2:
+# "Occurs every other week on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsUntil=Occurs %1$S\neffective %2$S until %3$S\nfrom %4$S to %5$S.
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
 repeatDetailsUntilAllDay=Occurs %1$S\neffective %2$S until %3$S.
-repeatDetailsInfinite=Occurs %1$S\neffective %2$S\n from %3$S to %4$S.
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleMonthly6:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsInfinite=Occurs %1$S\neffective %2$S\nfrom %3$S to %4$S.
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=Occurs %1$S\neffective %2$S.
 
-reminderCustomTitle=%1$S %2$S %3$S před začátkem události
-reminderTitleAtStartEvent=Při začátku události
-reminderTitleAtStartTask=Při začátku úkolu
-reminderTitleAtEndEvent=Při konci události
-reminderTitleAtEndTask=Při konci úkolu
-reminderCustomUnitMinute=minuta
-reminderCustomUnitMinutes=minuty
-reminderCustomUnitHour=hodina
-reminderCustomUnitHours=hodiny
-reminderCustomUnitDay=den
-reminderCustomUnitDays=dny
-reminderCustomRelationBefore=před
-reminderCustomRelationAfter=po
-reminderCustomOriginBeginEvent=začátku/kem události
-reminderCustomOriginEndEvent=konci/em události
-reminderCustomOriginBeginTask=začátku/kem úkolu
-reminderCustomOriginEndTask=konci/em úkolu
-reminderErrorMaxCountReachedEvent=Zvolený kalendář má omezení %1$S připomenutí pro jednu událost.
-reminderErrorMaxCountReachedTask=Zvolený kalendář má omezení %1$S připomenutí pro jeden úkol.
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Click here for details
+
 newEvent=Nová událost
 newTask=Nový úkol
 
@@ -155,4 +255,3 @@ yearlyOrder=%1$S %3$S %2$S
 # e.g. "First Saturday of September"
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
-
