--- a/cs/suite/chrome/mailnews/importMsgs.properties
+++ b/cs/suite/chrome/mailnews/importMsgs.properties
@@ -36,7 +36,7 @@
 # ***** END LICENSE BLOCK *****
 
 #
-# The following are used by the import code to display status/error 
+# The following are used by the import code to display status/error
 # and informational messages
 #
 
@@ -45,7 +45,7 @@
 ## @loc None
 2000=Nebyly nalezeny žádné adresáře pro import.
 
-# Error: Address book import not intialized		
+# Error: Address book import not intialized
 ## @name IMPORT_ERROR_AB_NOTINITIALIZED
 ## @loc None
 2001=Nelze importovat adresáře: chyba inicializace.
@@ -66,7 +66,7 @@
 ## @loc None
 2004=Nebyly nalezeny žádné složky pro import
 
-# Error: Mailbox import not intialized		
+# Error: Mailbox import not intialized
 ## @name IMPORT_ERROR_MB_NOTINITIALIZED
 ## @loc None
 2005=Nelze importovat složky s poštou, chyba v inicializaci
@@ -276,9 +276,14 @@
 2134=Vlastní 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Poznámky
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Zobrazené jméno
 
 #Error strings
 ImportAlreadyInProgress=Právě probíhá import. Zkuste to znovu až současný import skončí.
@@ -330,7 +335,7 @@ ImportSelectAddrFile=Vyberte soubor s adresářem
 
 # LOCALIZATION NOTE : "Communicator 4.x" is the used for previous versions of Netscape Communicator
 # Please translate using the brandname in respective languages for Netscape Communicator 4 releases.
-# LOCALIZATION NOTE : Please do not translate "*.na2", this represents the extension of the address book 
+# LOCALIZATION NOTE : Please do not translate "*.na2", this represents the extension of the address book
 # files from the Netscape Communicator 4 releases.
 # Comm4.xTo6.xImport user selection string
 Comm4xImportName=Communicator 4.x
@@ -340,7 +345,7 @@ Comm4xFiles=Adresáře Communicatoru (*.na2)
 DefaultFolderName=Importovaná pošta
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
 ImportModuleFolderName=Pošta %S
- 
+
 # LOCALIZATION NOTE : "Communicator 4.x" is the used for previous versions of Netscape Communicator
 # Please translate using the brandname in respective languages for Netscape Communicator 4 releases.
 # strings profile dialog that comes up when importing mail from 4.x
