Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -212,7 +212,7 @@ groupFlagged=Stjerne
 
 # defaults descriptions for tag prefs listed in mailnews.js
 # (we keep the .labels. names for backwards compatibility)
-mailnews.tags.remove=Slett alle etiketter
+mailnews.tags.remove=Slett tilordnede etiketter
 mailnews.labels.description.1=Viktig
 mailnews.labels.description.2=Arbeid
 mailnews.labels.description.3=Personlig
