--- a/pl/mail/chrome/messenger/activity.properties
+++ b/pl/mail/chrome/messenger/activity.properties
@@ -17,3 +17,12 @@ sentMessage           = Wysłano wiadomość
 sentMessageTo         = Wysłano wiadomość do %S
 failedToSendMessage   = Nieudana próba wysłania wiadomości
 failedToSendMessageTo = Nieudana próba wysłania wiadomości do %S
+
+deletedMessages    = Usunięto #1 wiadomość;Usunięto #1 wiadomości;Usunięto #1 wiadomości
+movedMessages      = Przeniesiono #1 wiadomość z #2 do #3;Przeniesiono #1 wiadomości z #2 do #3;Przeniesiono #1 wiadomości z #2 do #3
+copiedMessages     = Skopiowano #1 wiadomość z #2 do #3;Skopiowano #1 wiadomości z #2 do #3;Skopiowano #1 wiadomości z #2 do #3
+fromServerToServer = z #1 do #2
+deletedFolder      = Usunięto folder #1
+movedFolder        = Przeniesiono folder #1 do #2
+copiedFolder       = Skopiowano folder #1 do #2
+renamedFolder      = Zmieniono nazwę folderu #1 na #2
