l10n for bug 469053 - autosync progress should be shown on the Activity Manager window; landing strings early

--- a/pl/mail/chrome/messenger/activity.properties
+++ b/pl/mail/chrome/messenger/activity.properties
@@ -1,4 +1,3 @@
-# Status Text
 paused2         = Wstrzymano
 processing      = Przetwarzanie
 notStarted      = Nie rozpoczęto
@@ -17,6 +16,14 @@ sentMessage           = Wysłano wiadomość
 sentMessageTo         = Wysłano wiadomość do %S
 failedToSendMessage   = Nieudana próba wysłania wiadomości
 failedToSendMessageTo = Nieudana próba wysłania wiadomości do %S
+
+# FIXME: http://hg.mozilla.org/comm-central/diff/a266395d647b/mail/locales/en-US/chrome/messenger/activity.properties ridiculous!
+autosyncProcessProgress       = Pobieranie %1$S z %2$S wiadomości dla %3$S
+autosyncProcessDisplayText    = Uaktualnianie folderu %S
+autosyncEventDisplayText      = Folder %S jest aktualny
+autosyncEventStatusText       = Pobrane wiadomości: %S
+autosyncEventStatusTextNoMsgs = Brak pobranych wiadomości
+autosyncContextDisplayText    = Synchronizowanie: %S
 
 deletedMessages    = Usunięto #1 wiadomość;Usunięto #1 wiadomości;Usunięto #1 wiadomości
 movedMessages      = Przeniesiono #1 wiadomość z #2 do #3;Przeniesiono #1 wiadomości z #2 do #3;Przeniesiono #1 wiadomości z #2 do #3
