--- a/pl/dom/chrome/layout/css.properties
+++ b/pl/dom/chrome/layout/css.properties
@@ -38,8 +38,6 @@
 MimeNotCss=Arkusz stylów %1$S nie został wczytany, ponieważ zawarta deklaracja typu MIME tego arkusza: "%2$S" nie jest zgodna z typem "text/css".
 MimeNotCssWarn=Arkusz stylów %1$S został wczytany jako poprawny CSS pomimo tego, że deklaracja typu MIME tego arkusza: "%2$S" nie jest zgodna z typem "text/css".
 
-UseOfGetPropertyCSSValueWarning=Stosowanie getPropertyCSSValue() jest przestarzałe. Zamiast tego należy stosować getPropertyValue().
-
 PEUnexpEOF2=Niespodziewany koniec pliku podczas poszukiwania %1$S.
 PEParseRuleWSOnly=Do przetwarzania przekazano ciąg składający się wyłącznie ze znaków odstępu.
 PEDeclDropped=Deklaracja opuszczona.
@@ -130,11 +128,13 @@ PEBadDeclOrRuleEnd2=Oczekiwano ";" lub "}" by dokończyć deklarację, ale odnal
 PEInaccessibleProperty2=Nie można określić wartości dla własności wewnętrznej.
 PECommentEOF=koniec komentarza
 SEUnterminatedString=Znaleziono niedomknięty ciąg "%1$S".
-PEFontDescExpected=Oczekiwano deskryptora czcionki, ale odnaleziono '%1$S'.
-PEUnknownFontDesc=Nieznany deskryptor '%1$S' w regule @font-face.
-PEMQExpectedExpressionStart=Oczekiwano '(' jako rozpoczęcia wyrażenia zapytania media, ale odnaleziono '%1$S'.
+PEFontDescExpected=Oczekiwano deskryptora czcionki, ale odnaleziono "%1$S".
+PEUnknownFontDesc=Nieznany deskryptor "%1$S" w regule @font-face.
+PEMQExpectedExpressionStart=Oczekiwano "(" jako rozpoczęcia wyrażenia zapytania media, ale odnaleziono "%1$S".
 PEMQExpressionEOF=treść wyrażenia zapytania media
-PEMQExpectedFeatureName=Oczekiwano nazwy cechy mediów, ale odnaleziono '%1$S'.
-PEMQExpectedFeatureNameEnd=Oczekiwano ':' lub ')' po nazwie cechy mediów, ale odnaleziono '%1$S'.
-PEMQExpectedFeatureValue=Odnaleziono nieprawidłową wartość cechy mediów.
+PEMQExpectedFeatureName=Oczekiwano nazwy cechy mediów, ale odnaleziono "%1$S".
+PEMQExpectedFeatureNameEnd=Oczekiwano ":" lub ")" po nazwie cechy mediów, ale odnaleziono "%1$S".
 PEMQNoMinMaxWithoutValue=Cechy mediów zaczynające się na min- i max- muszą posiadać wartość.
+PEMQExpectedFeatureValue=Odnaleziono nieprawidłową wartość cechy mediów.
+PEBadFontBlockStart=Oczekiwano "{" jako rozpoczęcia reguły @font-face, ale odnaleziono "%1$S".
+PEBadFontBlockEnd=Oczekiwano "}" jako zakończenia reguły @font-face, ale odnaleziono "%1$S".
