l10n for  Bug 471989 -  atEndOfSession define in cookieAcceptDialog.properties should be capitalize  ; p=hgajewski, r=marcoos

--- a/pl/browser/chrome/browser/preferences/preferences.properties
+++ b/pl/browser/chrome/browser/preferences/preferences.properties
@@ -84,7 +84,7 @@ hostColon=Host:
 domainColon=Domena:
 forSecureOnly=Tylko szyfrowane połączenia
 forAnyConnection=Dowolny rodzaj połączenia
-AtEndOfSession = na końcu sesji
+expireAtEndOfSession=Pod koniec sesji
 
 can=Zezwól
 canSession=Zezwól na czas sesji
