--- a/pl/toolkit/chrome/cookie/cookieAcceptDialog.properties
+++ b/pl/toolkit/chrome/cookie/cookieAcceptDialog.properties
@@ -2,7 +2,7 @@ hostColon=Host:
 domainColon=Domena:
 forSecureOnly=Tylko podczas połączenia szyfrowanego
 forAnyConnection=Podczas każdego typu połączenia
-atEndOfSession=pod koniec sesji
+expireAtEndOfSession=Pod koniec sesji
 showDetails=Pokaż szczegóły
 hideDetails=Ukryj szczegóły
 detailsAccessKey=S
