--- a/de/suite/chrome/common/permissions/cookieViewer.properties
+++ b/de/suite/chrome/common/permissions/cookieViewer.properties
@@ -46,7 +46,7 @@ hostColon=Host:
 domainColon=Domain:
 forSecureOnly=Nur verschlüsselte Verbindungen
 forAnyConnection=Jeden Verbindungstyp
-AtEndOfSession = am Ende der Sitzung
+expireAtEndOfSession=Am Ende der Sitzung
 deleteAllCookies=Sollen wirklich alle Cookies gelöscht werden?
 deleteAllCookiesTitle=Alle Cookies entfernen
 deleteAllCookiesYes=&Entfernen
